# qubo-partition

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  generate_feature_visualization.py  pyproject.toml  related_works.md  requirements.txt
assets/: casia_results.csv
docs/: FINDINGS.md  SCHEDULE.md
experiments/: phase1_vertex_cover.py  phase2_hq_images.py  phase2_real_horses.py  phase2_segmentation.py  phase3_graphmi_bridge.py  run_all.py  run_autosplice.py  run_autosplice_patch.py  run_casia.py  run_oxford_pet.py  solver_portfolio.py  tune_lambda.py
notebooks/: build_colab_notebook.py  qubo_partition_colab.ipynb
report/: project_update.tex
scripts/: get_weizmann_horses.sh  lint.sh  make_casia_assets.py  make_colab_zip.sh
src/qubo_partition/: __init__.py  io_utils.py  viz.py
src/qubo_partition/bridge/: __init__.py  reconstruction.py
src/qubo_partition/data/: __init__.py  graphs.py  images.py  patches.py  real.py
src/qubo_partition/evaluation/: __init__.py  metrics.py  runner.py
src/qubo_partition/qubo/: __init__.py  base.py  segmentation.py  vertex_cover.py
src/qubo_partition/solvers/: __init__.py  annealer.py  exact_vc.py  greedy.py  gurobi.py  maxflow.py  portfolio.py  tabu.py
tests/: test_segmentation.py  test_solvers_and_bridge.py  test_vertex_cover.py
