[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qubo-partition"
version = "0.1.0"
description = "A closed-form QUBO for graph partitioning and image segmentation, solved by simulated annealing and validated against exact references."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Cong Thinh Nguyen" }]
dependencies = [
    "dimod>=0.12",
    "dwave-samplers>=1.3",
    "dwave-networkx>=0.8",
    "numpy>=1.24",
    "scipy>=1.10",
    "networkx>=3.0",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.6", "black>=24.0"]
real = ["pillow>=9.0", "scikit-image>=0.20"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100
target-version = "py39"
extend-exclude = ["notebooks"]

[tool.ruff.lint]
# pyflakes (F), pycodestyle (E/W), isort (I), pyupgrade (UP), bugbear (B)
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501"]  # line length is owned by black

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]  # re-exports for the public API
"experiments/run_all.py" = ["E402"]  # imports after sys.argv shim
